P2/arythParser.jj
PARSER_BEGIN(Parser)

/** Simple brace matcher. */
public class Parser {

  /** Main entry point. */
  public static void main(String args[]) {
    try {
      Parser parser = new Parser(System.in);
      parser.start();
      System.out.println("Ausdruck syntaktisch ok!");
    } catch (ParseException e) {
      System.err.println(e.getMessage());
    }
  }

}

PARSER_END(Parser)


SKIP : {
    " "
  | "\t"
  | "\n"
  | "\r"
  }
  
  TOKEN : {
    < number: "0" | (["1"-"9"] (["0"-"9"])*) >
  }
  

/** Root production. */
void start() :
{}
{
    expression()
    <EOF>
}

/** Brace matching production. */
void expression() :
{}
{ 
    <number> expressionPrime()
    | "(" expression() ")" expressionPrime()
}

void expressionPrime() :
{}
{
    (("+"|"*"|"-"|"/") expression() expressionPrime())?
    
}
